[gd_scene load_steps=11 format=4 uid="uid://cfcfhqs6pqgcm"]

[ext_resource type="Texture2D" uid="uid://j3ged81fnnl6" path="res://art/day_2/_atlas_day_02_tiles_maze.png" id="1_744ve"]
[ext_resource type="Script" path="res://scenes/day_02/_shared/maze/maze.gd" id="2_hjgam"]
[ext_resource type="PackedScene" uid="uid://d0x0fhmsb17ts" path="res://scenes/day_02/_shared/player/day_02_player.tscn" id="3_ac50a"]
[ext_resource type="Texture2D" uid="uid://coul13cr0fb2a" path="res://art/day_2/enemy_ghost_blue_0.png" id="5_08ki7"]
[ext_resource type="Texture2D" uid="uid://bqy1eiauwg23p" path="res://art/day_2/enemy_ghost_blue_1.png" id="6_w82sn"]
[ext_resource type="Texture2D" uid="uid://eeuatuh87lj5" path="res://art/day_2/enemy_ghost_yellow_0.png" id="7_uvffd"]
[ext_resource type="Texture2D" uid="uid://d3rmc66fdmxxx" path="res://art/day_2/enemy_ghost_yellow_1.png" id="8_k30f1"]
[ext_resource type="PackedScene" uid="uid://djle3i2ou6cx1" path="res://scenes/day_02/_shared/enemies/day_02_enemy.tscn" id="17_jfr4l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_onvd7"]
texture = ExtResource("1_744ve")
0:0/next_alternative_id = 4
0:0/0 = 0
1:0/0 = 0
1:1/next_alternative_id = 2
1:1/0 = 0
2:1/next_alternative_id = 2
2:1/0 = 0
2:0/0 = 0
2:2/0 = 0
1:2/next_alternative_id = 2
1:2/0 = 0
0:2/0 = 0
0:1/next_alternative_id = 3
0:1/0 = 0
4:0/next_alternative_id = 2
4:0/0 = 0
4:1/next_alternative_id = 4
4:1/0 = 0
4:2/next_alternative_id = 4
4:2/0 = 0
5:0/next_alternative_id = 6
5:0/0 = 0
5:1/0 = 0
5:2/0 = 0
6:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tiqs2"]
sources/0 = SubResource("TileSetAtlasSource_onvd7")

[node name="Maze" type="TileMapLayer"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAAAAAABAAEAACADAAAAAAAAAAAAAAAHAAAAAAAAAAAAABAJAAAAAAABAAEAACAEAAIAAAACAAIAAAAFAAIAAAACAAIAAAAGAAIAAAACAAIAAAABAAQAAAAAAAAAAFACAAQAAAAAAAAAADACAAUAAAAAAAAAAGABAAUAAAAEAAEAAAABAAYAAAAAAAIAAAABAAcAAAAAAAIAAAABAAgAAAABAAEAACAEAAQAAAAAAAAAAFAFAAQAAAABAAIAACAGAAQAAAAAAAAAAEAEAAUAAAAAAAAAAAAGAAUAAAAAAAAAAGAHAAcAAAABAAEAAFADAAcAAAACAAEAAAAEAAcAAAACAAIAAAAFAAcAAAACAAIAAAAGAAcAAAACAAIAAAAIAAQAAAAAAAAAAFAJAAQAAAAAAAAAADAIAAUAAAAAAAAAAAAJAAYAAAAAAAIAAAAJAAcAAAAAAAIAAAAJAAgAAAABAAEAADADAAkAAAAAAAAAACAGAAkAAAAAAAAAACAHAAkAAAAAAAAAADAEAAkAAAAAAAAAADAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAFAAUAAAAEAAAAAAAAAAIAAAACAAIAAAABAAIAAAABAAEAAFADAAIAAAACAAEAAAAKAAIAAAACAAIAAAAJAAIAAAABAAEAAEAHAAIAAAABAAEAAFAJAAUAAAAEAAEAABD//wAAAAAAAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD//wkAAAAAAAEAAAALAAAAAAAAAAEAABALAAEAAAAAAAEAABALAAIAAAAAAAEAABALAAMAAAAAAAEAABALAAQAAAAAAAEAABALAAUAAAAAAAEAABALAAYAAAAAAAEAABALAAcAAAAAAAEAABALAAgAAAAAAAEAABALAAkAAAAAAAEAABAAAP//AAAAAAEAAFABAP//AAAEAAAAAAACAP//AAAEAAAAAAADAP//AAAEAAAAAAAEAP//AAAEAAAAAAAFAP//AAAEAAAAAAAGAP//AAAEAAAAAAAHAP//AAAEAAAAAAAIAP//AAAEAAAAAAAJAP//AAAEAAAAAAAKAP//AAAEAAAAAAAAAAoAAAAAAAEAAGABAAoAAAAAAAEAAGACAAoAAAAAAAEAAGADAAoAAAAAAAEAAGAEAAoAAAAAAAEAAGAFAAoAAAAAAAEAAGAGAAoAAAAAAAEAAGAHAAoAAAAAAAEAAGAIAAoAAAAAAAEAAGAJAAoAAAAAAAEAAGAKAAoAAAAAAAEAAGD/////AAAEAAIAAAD//woAAAAEAAIAACALAAoAAAAEAAIAADALAP//AAAEAAIAABA=")
tile_set = SubResource("TileSet_tiqs2")
script = ExtResource("2_hjgam")

[node name="BlueGhostRespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="RedGhostRespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="YellowGhostRespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="RedGhostFirstSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="YellowGhostFirstSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerRevivalDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerInitPosMarker" type="Marker2D" parent="."]
position = Vector2(88, 136)
metadata/_edit_lock_ = true

[node name="RespawnPosMarker" type="Marker2D" parent="."]
position = Vector2(88, 72)
metadata/_edit_lock_ = true

[node name="PlayerOutOfMazeMarker" type="Marker2D" parent="."]
position = Vector2(-24, -8)
metadata/_edit_lock_ = true

[node name="Day02Player" parent="." instance=ExtResource("3_ac50a")]
metadata/_edit_lock_ = true

[node name="YellowGhost" parent="." instance=ExtResource("17_jfr4l")]
position = Vector2(-24, 24)
_texture_0 = ExtResource("7_uvffd")
_texture_1 = ExtResource("8_k30f1")
metadata/_edit_lock_ = true

[node name="BlueGhost" parent="." instance=ExtResource("17_jfr4l")]
position = Vector2(-24, 40)
_texture_0 = ExtResource("5_08ki7")
_texture_1 = ExtResource("6_w82sn")
metadata/_edit_lock_ = true

[node name="RedGhost" parent="." instance=ExtResource("17_jfr4l")]
position = Vector2(-24, 56)
metadata/_edit_lock_ = true

[node name="Food" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[connection signal="timeout" from="BlueGhostRespawnTimer" to="." method="_on_blue_ghost_respawn_timer_timeout"]
[connection signal="timeout" from="RedGhostRespawnTimer" to="." method="_on_red_ghost_respawn_timer_timeout"]
[connection signal="timeout" from="YellowGhostRespawnTimer" to="." method="_on_yellow_ghost_respawn_timer_timeout"]
[connection signal="timeout" from="RedGhostFirstSpawnTimer" to="." method="_on_red_ghost_first_spawn_timer_timeout"]
[connection signal="timeout" from="YellowGhostFirstSpawnTimer" to="." method="_on_yellow_ghost_first_spawn_timer_timeout"]
[connection signal="timeout" from="PlayerRevivalDelayTimer" to="." method="_on_player_revival_delay_timer_timeout"]
[connection signal="ate_regular_treat" from="Day02Player" to="." method="_on_day_02_player_ate_regular_treat"]
[connection signal="ate_super_treat" from="Day02Player" to="." method="_on_day_02_player_ate_super_treat"]
[connection signal="died" from="Day02Player" to="." method="_on_day_02_player_died"]
[connection signal="dying" from="Day02Player" to="." method="_on_day_02_player_dying"]
[connection signal="chomped" from="YellowGhost" to="." method="_on_enemy_chomped"]
[connection signal="dead" from="YellowGhost" to="." method="_on_yellow_ghost_dead"]
[connection signal="chomped" from="BlueGhost" to="." method="_on_enemy_chomped"]
[connection signal="dead" from="BlueGhost" to="." method="_on_blue_ghost_dead"]
[connection signal="chomped" from="RedGhost" to="." method="_on_enemy_chomped"]
[connection signal="dead" from="RedGhost" to="." method="_on_red_ghost_dead"]
